changes done to about section

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,23 +4,23 @@
 	  "imageSrc": "projects/project.png",
 	  "description": "This is a project made to learn the latest languages by building an app.",
 	  "skills": ["React", "Express", "Node"],
-	  "demo": "https://www.example.com",
-	  "source": "https://www.github.com"
+	  "deployedLink": "https://example.com",
+	  "githubLink": "https://github.com/example/project1"
 	},
 	{
 	  "title": "Project B",
 	  "imageSrc": "projects/project.png",
 	  "description": "This is a project made to learn the latest languages by building an app.",
 	  "skills": ["React", "Express", "Node", "Sass"],
-	  "demo": "https://www.example.com",
-	  "source": "https://www.github.com"
+	  "deployedLink": "https://example.com",
+	  "githubLink": "https://github.com/example/project1"
 	},
 	{
 	  "title": "Project C",
 	  "imageSrc": "projects/project.png",
 	  "description": "This is a project made to learn the latest languages by building an app.",
 	  "skills": ["React", "Express", "Node"],
-	  "demo": "https://www.example.com",
-	  "source": "https://www.github.com"
+	  "deployedLink": "https://example.com",
+	  "githubLink": "https://github.com/example/project1"
 	}
   ]
