--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,26 +1,56 @@
 [
 	{
 	  "title": "Project A",
-	  "imageSrc": "projects/project.png",
+	  "imageSrc": "projects/projectA.png",
 	  "description": "This is a project made to learn the latest languages by building an app.",
 	  "skills": ["React", "Express", "Node"],
-	  "deployedLink": "https://example.com",
-	  "githubLink": "https://github.com/example/project1"
+	  "deployedLink": "https://example.com/projectA",
+	  "githubLink": "https://github.com/username/projectA",
+	  "demoGifSrc": "projects/projectA-demo.gif"
 	},
 	{
 	  "title": "Project B",
-	  "imageSrc": "projects/project.png",
+	  "imageSrc": "projects/projectB.png",
 	  "description": "This is a project made to learn the latest languages by building an app.",
 	  "skills": ["React", "Express", "Node", "Sass"],
-	  "deployedLink": "https://example.com",
-	  "githubLink": "https://github.com/example/project1"
+	  "deployedLink": "https://example.com/projectB",
+	  "githubLink": "https://github.com/username/projectB",
+	  "demoGifSrc": "projects/projectB-demo.gif"
 	},
 	{
 	  "title": "Project C",
-	  "imageSrc": "projects/project.png",
+	  "imageSrc": "projects/projectC.png",
 	  "description": "This is a project made to learn the latest languages by building an app.",
 	  "skills": ["React", "Express", "Node"],
-	  "deployedLink": "https://example.com",
-	  "githubLink": "https://github.com/example/project1"
+	  "deployedLink": "https://example.com/projectC",
+	  "githubLink": "https://github.com/username/projectC",
+	  "demoGifSrc": "projects/projectC-demo.gif"
+	},
+	{
+	  "title": "Project A",
+	  "imageSrc": "projects/projectA.png",
+	  "description": "This is a project made to learn the latest languages by building an app.",
+	  "skills": ["React", "Express", "Node"],
+	  "deployedLink": "https://example.com/projectA",
+	  "githubLink": "https://github.com/username/projectA",
+	  "demoGifSrc": "projects/projectA-demo.gif"
+	},
+	{
+	  "title": "Project B",
+	  "imageSrc": "projects/projectB.png",
+	  "description": "This is a project made to learn the latest languages by building an app.",
+	  "skills": ["React", "Express", "Node", "Sass"],
+	  "deployedLink": "https://example.com/projectB",
+	  "githubLink": "https://github.com/username/projectB",
+	  "demoGifSrc": "projects/projectB-demo.gif"
+	},
+	{
+	  "title": "Project C",
+	  "imageSrc": "projects/projectC.png",
+	  "description": "This is a project made to learn the latest languages by building an app.",
+	  "skills": ["React", "Express", "Node"],
+	  "deployedLink": "https://example.com/projectC",
+	  "githubLink": "https://github.com/username/projectC",
+	  "demoGifSrc": "projects/projectC-demo.gif"
 	}
-  ]
+]
